# Agile-is-the-new-Black

./: .gitignore  API_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
backend/app/api/: auth.py  expenses.py  households.py
backend/app/core/: config.py  invite_codes.py  security.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/tests/: conftest.py  test_auth.py  test_general.py
backend/tests/acceptance/: test_add_new_user.py  test_confirm_expense_paid.py  test_create_and_split_expense.py  test_invite_code_generation.py  test_join_household.py  test_user_login.py  test_view_household_members.py
backend/tests/acceptance/features/: ID001_Add_New_User.feature  ID002_User_Login.feature  ID004_Generate_Unique_Invite_Code.feature  ID005_Join_A_Household.feature  ID007_Create_Split_Expense.feature  ID008_View_Household_Member_list.feature  ID010_Confirm_expense_is_paid.feature
backend/tests/unit/: test_auth_logic.py  test_confirm_expense_paid.py  test_create_and_split_expense.py  test_household_join.py  test_household_members.py  test_invite_code_generation.py  test_security.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: expense.dart  household.dart  user.dart
frontend/lib/screens/: home_screen.dart  login_screen.dart
frontend/lib/services/: api_service.dart
