[project]
name = "expense-tracker-backend"
version = "1.0.0"
description = "Household Expense Tracker – FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "python-jose[cryptography]>=3.4,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "bcrypt>=4.2,<5.0",
    "python-multipart>=0.0.20,<1.0",
    "email-validator>=2.2,<3.0",
    "alembic>=1.14,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "httpx>=0.28,<1.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.9,<1.0",
]

# ── Ruff ──────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "T20", # flake8-print (catch stray prints)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "B008",   # do not perform function call in argument defaults (Depends() pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest ────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
